# plash_cli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  settings.ini
.github/workflows/: plash_deploy.yaml
docs_site/: .gitignore  .plash  main.py  requirements.txt
examples/auth/: main.py  requirements.txt
examples/fastapi/: main.py
examples/flask/: main.py
examples/gradio/: main.py
examples/inline_dependencies/: main.py
examples/jupyterlab/: main.py
examples/magickey_auth/: main.py  requirements.txt
examples/marimo/: main.py
examples/minimal/: main.py
examples/plash_production/: main.py
examples/streamlit/: main.py
examples/with_db/: main.py  requirements.txt
examples/with_setup/: setup.sh
nbs/: 00_cli.ipynb  00_core.ipynb  01_auth.ipynb  _quarto.yml  custom.scss  index.ipynb  nbdev.yml  sidebar.yml
nbs/explains/: 00_docker-caching.ipynb  00_docker_caching.ipynb  01_data_storage.ipynb  02_usage_billing.ipynb  image-build-caching.ipynb  tour-of-cli.ipynb  tour-of-webui.ipynb
nbs/how_to/: 00_env_vars.ipynb  01-аdd-environment-variables.ipynb  01_add_dependencies.ipynb  02_add_custom_domain.ipynb  02_user_authentication.ipynb  03_add_custom_domain.ipynb  03_restore_backups.ipynb  04_auth.ipynb  04_authentication.ipynb
nbs/reference/: 00_cli.ipynb
nbs/test_apps/script_app/: script.py
nbs/test_apps/with_auth/: main.py  plashauth.py  requirements.txt
nbs/tutorials/: 01-environment-variables.qmd  02-inline-deps.ipynb  02-inline-deps.qmd  03-add-non-python-deps.ipynb  04-dealing-with-databases.ipynb  05-static-sites.ipynb  06-non-fasthtml-apps.ipynb  07-deploy-with-github-actions.ipynb  08-oauth.ipynb  09-download-your-app.ipynb  10-custom-domains.ipynb
plash_cli/: __init__.py  _bash_magic.py  _modidx.py  auth.py  auth_mock.py  cli.py  core.py
scripts/: deploy_docs.sh
