[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name="plash_cli"
dynamic = ["version"]
description = "CLI for the Plash hosting service"
readme = "README.md"
requires-python=">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Jeremy Howard", email = "info@fast.ai"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.urls]
Repository = "https://github.com/AnswerDotAI/plash_cli"
Documentation = "https://AnswerDotAI.github.io/plash_cli"

[project.entry-points.nbdev]
plash_cli = "plash_cli._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "plash_cli.__version__"}

[tool.setuptools.packages.find]
include = ["plash_cli"]

[tool.nbdev]
custom_sidebar = false
